Double character, slidding improvement

--- a/Platformer/Platformer.vcxproj
+++ b/Platformer/Platformer.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="sources/SpriteAnimation.cpp" />
     <ClCompile Include="sources/Level.cpp" />
     <ClCompile Include="sources/LoadHelper.cpp" />
+    <ClCompile Include="sources\CircularEnemy.cpp" />
     <ClCompile Include="sources\ItemsTypesListing.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +113,8 @@
     <ClInclude Include="sources/SpriteAnimation.h" />
     <ClInclude Include="sources/Level.h" />
     <ClInclude Include="sources/LoadHelper.h" />
+    <ClInclude Include="sources\Circle.h" />
+    <ClInclude Include="sources\CircularEnemy.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
