--- a/Platformer/Platformer.vcxproj.filters
+++ b/Platformer/Platformer.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="sources\ItemsTypesListing.cpp">
       <Filter>Fichiers sources\Platformer</Filter>
     </ClCompile>
+    <ClCompile Include="sources\CircularEnemy.cpp">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sources/Input.h">
@@ -169,6 +172,12 @@
     </ClInclude>
     <ClInclude Include="sources/MainMenu.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="sources\CircularEnemy.h">
+      <Filter>Fichiers d%27en-tête\Platformer\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="sources\Circle.h">
+      <Filter>Fichiers d%27en-tête\Structs</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
