--- a/Platformer/Platformer.vcxproj.filters
+++ b/Platformer/Platformer.vcxproj.filters
@@ -5,40 +5,24 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Fichiers d%27en-tête">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Fichiers de ressources">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Fichiers d%27en-tête\Platformer">
-      <UniqueIdentifier>{55a403fc-0176-4492-83e5-e9e97d6c49d9}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Fichiers sources\Platformer">
       <UniqueIdentifier>{fe7fc731-5abb-45d2-96b3-0be7fae934b5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête\Structs">
-      <UniqueIdentifier>{50bb1661-ef2b-478f-bf33-ebf413b21956}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête\Images">
-      <UniqueIdentifier>{b036ddd5-7d46-43ba-8932-bc92ac103cd7}</UniqueIdentifier>
     </Filter>
     <Filter Include="Fichiers sources\Images">
       <UniqueIdentifier>{36d6b55c-193a-49d9-bb94-d20bb6835b50}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Fichiers d%27en-tête\Menu">
-      <UniqueIdentifier>{bb7e5979-f616-447e-88ed-862a682bb582}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Fichiers sources\Menu">
       <UniqueIdentifier>{11c6405a-e11f-4398-982d-2e9b313c555c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Fichiers d%27en-tête\Platformer\Items">
-      <UniqueIdentifier>{4a57e640-f1cc-4164-8ceb-ba136234080e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Fichiers sources\Platformer\Items">
       <UniqueIdentifier>{8ff529c6-18a4-480b-9ff9-e36c6aa30474}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\Structs">
+      <UniqueIdentifier>{50bb1661-ef2b-478f-bf33-ebf413b21956}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -105,79 +89,91 @@
     <ClCompile Include="sources\CircularEnemy.cpp">
       <Filter>Fichiers sources\Platformer\Items</Filter>
     </ClCompile>
+    <ClCompile Include="sources\Game.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="sources\Camera.cpp">
+      <Filter>Fichiers sources\Platformer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="sources/Input.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/SoundPlayer.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/LoadHelper.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/BlocBonus.h">
-      <Filter>Fichiers d%27en-tête\Platformer\Items</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/BonusMushroom.h">
-      <Filter>Fichiers d%27en-tête\Platformer\Items</Filter>
-    </ClInclude>
     <ClInclude Include="sources/Color.h">
-      <Filter>Fichiers d%27en-tête\Structs</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/Level.h">
-      <Filter>Fichiers d%27en-tête\Platformer</Filter>
+      <Filter>Fichiers sources\Structs</Filter>
     </ClInclude>
     <ClInclude Include="sources/FPoint.h">
-      <Filter>Fichiers d%27en-tête\Structs</Filter>
+      <Filter>Fichiers sources\Structs</Filter>
     </ClInclude>
     <ClInclude Include="sources/Point.h">
-      <Filter>Fichiers d%27en-tête\Structs</Filter>
+      <Filter>Fichiers sources\Structs</Filter>
     </ClInclude>
     <ClInclude Include="sources/Size.h">
-      <Filter>Fichiers d%27en-tête\Structs</Filter>
+      <Filter>Fichiers sources\Structs</Filter>
     </ClInclude>
     <ClInclude Include="sources/Rectangle.h">
-      <Filter>Fichiers d%27en-tête\Structs</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/Item.h">
-      <Filter>Fichiers d%27en-tête\Platformer</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/CoinBonus.h">
-      <Filter>Fichiers d%27en-tête\Platformer\Items</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/EnemyMushroom.h">
-      <Filter>Fichiers d%27en-tête\Platformer\Items</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/Map.h">
-      <Filter>Fichiers d%27en-tête\Platformer</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/Sprite.h">
-      <Filter>Fichiers d%27en-tête\Images</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/SpriteAnimation.h">
-      <Filter>Fichiers d%27en-tête\Images</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/ImageLibrary.h">
-      <Filter>Fichiers d%27en-tête\Images</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/ItemHelper.h">
-      <Filter>Fichiers d%27en-tête\Platformer</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/PlayerAvatar.h">
-      <Filter>Fichiers d%27en-tête\Platformer\Items</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/MobilePlatform.h">
-      <Filter>Fichiers d%27en-tête\Platformer\Items</Filter>
-    </ClInclude>
-    <ClInclude Include="sources/MainMenu.h">
-      <Filter>Fichiers d%27en-tête\Menu</Filter>
-    </ClInclude>
-    <ClInclude Include="sources\CircularEnemy.h">
-      <Filter>Fichiers d%27en-tête\Platformer\Items</Filter>
+      <Filter>Fichiers sources\Structs</Filter>
     </ClInclude>
     <ClInclude Include="sources\Circle.h">
-      <Filter>Fichiers d%27en-tête\Structs</Filter>
+      <Filter>Fichiers sources\Structs</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/MainMenu.h">
+      <Filter>Fichiers sources\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/PlayerAvatar.h">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/BlocBonus.h">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/BonusMushroom.h">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="sources\CircularEnemy.h">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/CoinBonus.h">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/EnemyMushroom.h">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/MobilePlatform.h">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/Map.h">
+      <Filter>Fichiers sources\Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/Item.h">
+      <Filter>Fichiers sources\Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/ItemHelper.h">
+      <Filter>Fichiers sources\Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/Level.h">
+      <Filter>Fichiers sources\Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/SoundPlayer.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="sources\Game.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/Input.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/LoadHelper.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/ImageLibrary.h">
+      <Filter>Fichiers sources\Images</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/Sprite.h">
+      <Filter>Fichiers sources\Images</Filter>
+    </ClInclude>
+    <ClInclude Include="sources/SpriteAnimation.h">
+      <Filter>Fichiers sources\Images</Filter>
+    </ClInclude>
+    <ClInclude Include="sources\Camera.h">
+      <Filter>Fichiers sources\Platformer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
