--- a/Platformer/Platformer.vcxproj
+++ b/Platformer/Platformer.vcxproj
@@ -87,6 +87,8 @@
     <ClCompile Include="sources/SpriteAnimation.cpp" />
     <ClCompile Include="sources/Level.cpp" />
     <ClCompile Include="sources/LoadHelper.cpp" />
+    <ClCompile Include="sources\Area.cpp" />
+    <ClCompile Include="sources\AreaManager.cpp" />
     <ClCompile Include="sources\Camera.cpp" />
     <ClCompile Include="sources\CircularEnemy.cpp" />
     <ClCompile Include="sources\Game.cpp" />
@@ -115,6 +117,8 @@
     <ClInclude Include="sources/SpriteAnimation.h" />
     <ClInclude Include="sources/Level.h" />
     <ClInclude Include="sources/LoadHelper.h" />
+    <ClInclude Include="sources\Area.h" />
+    <ClInclude Include="sources\AreaManager.h" />
     <ClInclude Include="sources\Camera.h" />
     <ClInclude Include="sources\Circle.h" />
     <ClInclude Include="sources\CircularEnemy.h" />
