--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@
 ################################################################################
 
 /Platformer/Debug/MarioBross.tlog/MarioBross.lastbuildstate
+/Platformer/Debug/MarioBross.tlog/link.write.1.tlog
+/Platformer/Debug/MarioBross.tlog/link.read.1.tlog
+/Platformer/Debug/MarioBross.tlog/link.command.1.tlog
+/Platformer/Debug/MarioBross.tlog/CL.write.1.tlog
+/Platformer/Debug/MarioBross.tlog/CL.read.1.tlog
+/Platformer/Debug/MarioBross.tlog/CL.command.1.tlog
+/Platformer/Debug/Platformer.tlog/Platformer.lastbuildstate
+/Platformer/Debug/Platformer.tlog/link.write.1.tlog
+/Platformer/Debug/Platformer.tlog/link.read.1.tlog
+/Platformer/Debug/Platformer.tlog/link.command.1.tlog
+/Platformer/Debug/Platformer.tlog/CL.write.1.tlog
+/Platformer/Debug/Platformer.tlog/CL.read.1.tlog
+/Platformer/Debug/Platformer.tlog/CL.command.1.tlog
