--- a/Platformer/Platformer.vcxproj.filters
+++ b/Platformer/Platformer.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClCompile Include="sources\AreaManager.cpp">
       <Filter>Fichiers sources\Platformer</Filter>
     </ClCompile>
+    <ClCompile Include="sources\Door.cpp">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sources/Color.h">
@@ -186,6 +189,9 @@
     </ClInclude>
     <ClInclude Include="sources\AreaManager.h">
       <Filter>Fichiers sources\Platformer</Filter>
+    </ClInclude>
+    <ClInclude Include="sources\Door.h">
+      <Filter>Fichiers sources\Platformer\Items</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
