--- a/Platformer/Platformer.vcxproj
+++ b/Platformer/Platformer.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="sources\Camera.cpp" />
     <ClCompile Include="sources\CircularEnemy.cpp" />
     <ClCompile Include="sources\Door.cpp" />
+    <ClCompile Include="sources\Duplicator.cpp" />
     <ClCompile Include="sources\Game.cpp" />
     <ClCompile Include="sources\ItemsTypesListing.cpp" />
   </ItemGroup>
@@ -128,6 +129,7 @@
     <ClInclude Include="sources\Circle.h" />
     <ClInclude Include="sources\CircularEnemy.h" />
     <ClInclude Include="sources\Door.h" />
+    <ClInclude Include="sources\Duplicator.h" />
     <ClInclude Include="sources\Game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
